Solve wrapping issue

--- a/css/main.css
+++ b/css/main.css
@@ -610,6 +610,7 @@ input:-webkit-autofill:active {
     margin-left: 0%; } }
 
 .about-page .about-header {
+  z-index:-2;
   margin-top: 5px; }
   @media (max-width: 992px) {
     .about-page .about-header {
@@ -1338,6 +1339,7 @@ input:-webkit-autofill:active {
 
 .btn {
   font-family: Raleway;
+  z-index:3000;
   font-size: 14px;
   font-size: 1.3rem;
   font-weight: 500;
@@ -1349,7 +1351,7 @@ input:-webkit-autofill:active {
   .btn.btn-primary {
     outline: none !important;
     border: none;
-    z-index:3000;
+    z-index:3000 !important;
     border-radius: 3px; }
   .btn.btn-default {
     font-size: 8px;
